2004-09-13  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-message.c (write_addrspec): New folding callback to
	use on addrspec headers.
	(g_mime_message_init): Register write_addrspec for all address
	headers.

	* gmime/gmime-utils.c (header_fold): Fixed the logic a bit for
	structured headers such that we don't break long tokens.

2004-08-22  Jeffrey Stedfast  <fejj@ximian.com>

	* README: Updated.

	* configure.in: Bumped the version to 2.1.8

	* gmime/gmime.h.in: #include <gmime/gmime-session-simple.h> for
	ia64 build fix on Debian (required because of the way gtk-doc's
	scan program works).

	* gmime/gmime-filter-enriched.c (enriched_to_html): Don't replace
	<nofill> with <pre>. Also, replace lone '\n's with a space as
	suggested by rfc1896.

2004-08-08  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-multipart-encrypted.c
	(g_mime_multipart_encrypted_encrypt): Don't set encrypted.asc as
	the filename anymore.

	* gmime/gmime-multipart-signed.c (g_mime_multipart_signed_sign):
	Added a hack for Balsa so it can support S/MIME. Also don't set
	the filename to signature.asc. Balsa maintainers don't want this
	*shrug*.
	(g_mime_multipart_signed_verify): Same. These changes really
	require a design change to CipherContext but that'll have to wait.

2004-08-04  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Changed the iconv-detect logic to not error-out on
	fail. The code can properly handle the case where iconv-detect.h
	doesn't exist, so let it do that instead.

2004-07-30  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c (rfc2047_encode_get_rfc822_words): Don't use
	g_unichar_isspace() here, we only want to break 'words' on ascii
	lwsp.

2004-07-16  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime.c (g_mime_init): Make intialisation ref-counted.
	(g_mime_shutdown): Updated.

2004-07-06  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-utils.c (rfc2047_encode_get_rfc822_words): Break